--- a/build.gradle
+++ b/build.gradle
@@ -2,17 +2,17 @@ apply from: 'https://raw.githubusercontent.com/concordion/concordion-extension-b
 
 description = 'An extension to the concordion:run command to run specifications in parallel'
 
-repositories {
-    maven {
-        url 'https://oss.sonatype.org/content/repositories/snapshots/'
-    }
-}
+// repositories {
+//     maven {
+//         url 'https://oss.sonatype.org/content/repositories/snapshots/'
+//     }
+// }
 
 dependencies {
-    compile     'com.google.guava:guava:18.0',
-                'org.slf4j:slf4j-api:1.7.10'
-    testCompile 'org.concordion:concordion-logging-tooltip-extension:1.1.2'
-    testRuntime 'org.slf4j:slf4j-simple:1.7.10'
+    implementation     'com.google.guava:guava:18.0',
+                       'org.slf4j:slf4j-api:1.7.10'
+    testImplementation 'org.concordion:concordion-logging-tooltip-extension:1.1.2'
+    testRuntimeOnly    'org.slf4j:slf4j-simple:1.7.10'
 }
 
 ext {
